Fix images overflowing modal

--- a/client/src/components/Monument/Images/Gallery/Gallery.scss
+++ b/client/src/components/Monument/Images/Gallery/Gallery.scss
@@ -89,10 +89,16 @@
         .modal-content {
             max-height: 100%;
             height: 100%;
+            display: flex;
+            flex-direction: column;
+
+            .modal-header {
+                flex-grow: 1;
+            }
 
             .modal-body {
-                max-height: 100%;
-                height: 100%;
+                min-height: 0;
+                flex-grow: 1;
                 img {
                     max-height: 100%;
                     max-width: 100%;
